Se creó con Colab

--- a/Situación_Problema.ipynb
+++ b/Situación_Problema.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOq8jrgoBD+KP7dhbS9sYu+",
+      "authorship_tag": "ABX9TyP1t0BAL5Tiz1+VDzy3Hgnc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "NOMBRE:\n",
         "Análisis de la Actividad Empresarial del Sector Comercio en México (2011–2025)\n",
         "Basado en la Encuesta Mensual de Opinión Empresarial (EMOE) – INEGI"
       ],
@@ -277,10 +276,6 @@
         }
       ],
       "source": [
-        "\n",
-        "# Carolina Olvera A01571647\n",
-        "# ENCUESTA MENSUAL DE OPINIÓN EMPRESARIAL (EMOE) – INEGI\n",
-        "\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "from google.colab import files\n",
@@ -304,9 +299,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# PREGUNTA 1: ¿Cómo ha cambiado el IAT promedio del sector comercio entre 2011 y 2025?"
+      ],
+      "metadata": {
+        "id": "EOqUvnl-CQNx"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# PREGUNTA 1: ¿Cómo ha cambiado el IAT promedio del sector comercio entre 2011 y 2025?\n",
+        "\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -345,16 +349,28 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Conclusión\n",
+        "\n",
+        "El sector comercio mostró resiliencia tras la pandemia, pero aún no logra recuperar el dinamismo que tenía antes de 2017. Esto sugiere la necesidad de políticas de impulso económico sostenido."
+      ],
       "metadata": {
         "id": "eu7NbmMbBGn6"
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
         "# PREGUNTA 2: ¿Qué proporción representa cada tipo de estatus en los datos (Cifras definitivas, preliminares, etc.)?\n",
-        "# Contar frecuencia de cada tipo de estatus\n",
+        "# Contar frecuencia de cada tipo de estatus"
+      ],
+      "metadata": {
+        "id": "xGHGwdpwCZQp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "estatus_counts = df[\"ESTATUS\"].value_counts()\n",
         "\n",
         "plt.figure(figsize=(6,6))\n",
@@ -383,6 +399,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conclusión\n",
+        "\n",
+        "El alto porcentaje de cifras definitivas refuerza la calidad y validez de los resultados obtenidos, permitiendo realizar análisis estadísticos con confianza."
+      ],
+      "metadata": {
+        "id": "QPXt7Q-7DF4D"
+      }
     },
     {
       "cell_type": "markdown",
