--- a/Situación_Problema_FINAL.ipynb
+++ b/Situación_Problema_FINAL.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsKBnUFuCtwB9GmtZ9Nz1z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,9 +42,8 @@
         "\n",
         "1. Descripción del conjunto de datos  \n",
         "2. Variables críticas utilizadas en el análisis  \n",
-        "3. Estadísticos descriptivos de las variables críticas  \n",
         "\n",
-        "4. Preguntas de investigación y análisis exploratorio  \n",
+        "3. Preguntas de investigación y análisis exploratorio  \n",
         "   - Pregunta 1: Evolución del IAT (gráfico de barras)  \n",
         "   - Pregunta 2: Distribución del estatus de los datos (pie chart)  \n",
         "   - Pregunta 3: Tendencias de ventas, ingresos y compras (línea)  \n",
@@ -55,11 +53,9 @@
         "   - Pregunta 7: Distribución general del IAT (boxplot)  \n",
         "   - Pregunta 8: Modelo predictivo del IAT basado en ventas netas (regresión lineal)  \n",
         "\n",
-        "5. Hallazgos relevantes del análisis  \n",
-        "6. Limitaciones del estudio  \n",
-        "7. Reflexión de pensamiento crítico  \n",
-        "8. Conclusiones generales  \n",
-        "9. Anexos (opcional)\n"
+        "4. Reflexión de pensamiento crítico, limitaciones y siguientes pasos\n",
+        "5. Conclusiones generales  \n",
+        "6. Otros datos relevantes\n"
       ],
       "metadata": {
         "id": "4M2-NzQQ7k18"
@@ -107,11 +103,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 370
+          "height": 261
         },
         "id": "iUumB3joL7qO",
         "outputId": "7fa4ce3e-e49f-4e7c-9d37-4c51ed2a017c"
@@ -698,12 +694,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 237
         },
         "id": "MNHL3Qh92w2N",
         "outputId": "6997d6f6-cff0-4496-df3d-e6d728433bdc"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1187,7 +1183,7 @@
         "id": "M4AFP4-z3H6O",
         "outputId": "3c6a3ba9-1688-4d51-c094-58d0f6d9bf2d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1236,12 +1232,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 506
+          "height": 505
         },
         "id": "x59w7wdk3MQI",
         "outputId": "5619bbb0-b978-4b02-db4f-2f3ea2554cba"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1292,7 +1288,7 @@
       "metadata": {
         "id": "dsnFjTdz4vce"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1311,7 +1307,7 @@
         "id": "yU7kmG093YlS",
         "outputId": "8421a72e-62e6-4ac6-e8ca-fe2864c14e04"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1362,12 +1358,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 597
+          "height": 575
         },
         "id": "FARM4nXQ3jjr",
         "outputId": "8c16fd1d-13cc-46ea-c8ea-f635560ce56c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1429,7 +1425,7 @@
         "id": "vZ_FUHEj3qmH",
         "outputId": "11284854-d52b-4eec-8f95-0f90a3bcfe68"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1486,12 +1482,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 542
+          "height": 540
         },
         "id": "04j4311L6HlZ",
         "outputId": "1962d18d-c6c8-4067-dbb8-874f495035d8"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
