--- a/Situación_Problema_FINAL.ipynb
+++ b/Situación_Problema_FINAL.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "authorship_tag": "ABX9TyOtO80+txrLnAx/DBSlBGM7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,12 +39,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Este análisis explora la evolución del nivel de actividad empresarial del sector comercio en México entre 2011 y 2025, empleando datos de la EMOE del INEGI. El objetivo es identificar tendencias, relaciones entre variables económicas clave y patrones que permitan comprender el comportamiento del sector antes, durante y después de eventos económicos relevantes como la pandemia. A través de análisis descriptivo, visualizaciones y un modelo predictivo básico, se construye una interpretación integral del dinamismo del sector."
+      ],
+      "metadata": {
+        "id": "fSZ9RUPVJhhQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Tabla de Contenidos\n",
         "\n",
         "1. Descripción del conjunto de datos  \n",
         "2. Variables críticas utilizadas en el análisis  \n",
+        "3. Estadísticos descriptivos de las variables críticas  \n",
         "\n",
-        "3. Preguntas de investigación y análisis exploratorio  \n",
+        "4. Preguntas de investigación y análisis exploratorio  \n",
         "   - Pregunta 1: Evolución del IAT (gráfico de barras)  \n",
         "   - Pregunta 2: Distribución del estatus de los datos (pie chart)  \n",
         "   - Pregunta 3: Tendencias de ventas, ingresos y compras (línea)  \n",
@@ -53,9 +64,11 @@
         "   - Pregunta 7: Distribución general del IAT (boxplot)  \n",
         "   - Pregunta 8: Modelo predictivo del IAT basado en ventas netas (regresión lineal)  \n",
         "\n",
-        "4. Reflexión de pensamiento crítico, limitaciones y siguientes pasos\n",
-        "5. Conclusiones generales  \n",
-        "6. Otros datos relevantes\n"
+        "5. Hallazgos relevantes del análisis  \n",
+        "6. Limitaciones del estudio  \n",
+        "7. Reflexión de pensamiento crítico  \n",
+        "8. Conclusiones generales  \n",
+        "9. Anexos (opcional)\n"
       ],
       "metadata": {
         "id": "4M2-NzQQ7k18"
@@ -65,16 +78,25 @@
       "cell_type": "markdown",
       "source": [
         "##Descripción del conjunto de datos\n",
-        "El conjunto de datos contiene información mensual del sector comercio (códigos 43–46) desde 2011 hasta 2025.\n",
+        "El conjunto de datos proviene de la EMOE del INEGI y abarca información mensual del sector comercio (códigos 43–46) desde 2011 hasta 2025. Incluye métricas asociadas al comportamiento operativo, económico y laboral del sector.\n",
         "\n",
         "Variables principales:\n",
-        "- IAT (Índice de Actividad Total)\n",
-        "- Ventas netas  \n",
-        "- Ingresos  \n",
-        "- Compras netas  \n",
-        "- Inventarios de mercancías  \n",
-        "- Personal ocupado  \n",
-        "- Estatus de la información  "
+        "\n",
+        "- IAT (Índice de Actividad Total): Mide el dinamismo empresarial.\n",
+        "\n",
+        "- Ventas netas: Monto total de ventas generadas.\n",
+        "\n",
+        "- Ingresos: Entradas monetarias totales de actividades comerciales.\n",
+        "\n",
+        "- Compras netas: Gastos por adquisición de mercancías.\n",
+        "\n",
+        "- Inventarios de mercancías: Existencias disponibles.\n",
+        "\n",
+        "- Personal ocupado: Número de empleados.\n",
+        "\n",
+        "- Estatus del registro: Cifras preliminares o definitivas.\n",
+        "\n",
+        "Estas variables fueron seleccionadas porque capturan la actividad económica y operativa del sector y permiten construir métricas de tendencia, estacionalidad y correlación."
       ],
       "metadata": {
         "id": "nhb6B0h47o6n"
